# tresor

./: .gitignore  LICENSE.md  README.md  default.nix  flake.nix  pom.xml  sync_langfiles.sh
.run/: Tresor.run.xml
src/main/java/net/juligames/tresor/: Tresor.java  TresorGUI.java  Utils.java
src/main/java/net/juligames/tresor/controller/: AbstractController.java  AuthenticationController.java  BankingController.java  PrivateMessageController.java  RESTCaller.java  UserController.java
src/main/java/net/juligames/tresor/error/: MissingAuthenticationException.java
src/main/java/net/juligames/tresor/model/: AuthenticationModel.java  BankingModel.java  ConfigModel.java  DevConfig.java  Model.java  PrivateMessagesModel.java  ProjectPropertiesUtil.java  UserModel.java
src/main/java/net/juligames/tresor/rest/: Authentication.java  BalanceResponse.java  Context.java  EmptyBody.java  GenericError.java  GenericSuccess.java  HTTPStatus.java  InboxElement.java  JWTResponse.java  PrivateMessage.java  RESTCaller.java  RawResponse.java  ResponseContainer.java  ServersideProcessingError.java  UnauthorizedResponse.java  UnprocessableEntity.java  ValidUsernames.java
src/main/java/net/juligames/tresor/theme/: BefatorTheme.java  CustomThemeManager.java
src/main/java/net/juligames/tresor/utils/: DemoException.java  SecureRunnableRunner.java  TresorExceptionHandler.java  ViewUtils.java
src/main/java/net/juligames/tresor/views/: DashboardView.java  LoginView.java  PrivateMessagesView.java  RegisterView.java  SettingsView.java  TresorWindow.java
src/main/java/net/juligames/tresor/views/common/: Common.java
src/main/java/net/juligames/tresor/views/common/menu/: AboutMenu.java  AppMenu.java  HomeMenu.java  SettingsMenu.java
src/main/resources/: application.properties  logback.xml
src/main/resources/langfiles/: langfile_de.json  langfile_de_au.json  langfile_de_by.json  langfile_de_formal.json  langfile_de_informal.json  langfile_en.json
src/main/resources/theme/: befator.properties
src/test/java/net/juligames/tresor/lang/: TranslationsTest.java
src/test/java/net/juligames/tresor/model/: MavenPropertiesUtilTest.java
src/test/java/net/juligames/tresor/rest/: RestCallerTest.java
tresor-server/Tresor/: pom.xml
tresor-server/Tresor/src/main/java/net/juligames/tresor/: Main.java  Theme.java  Tresor.java  TresorGUI.java  View.java
tresor-server/Tresor/src/main/java/net/juligames/tresor/controller/: AuthenticationController.java  BankingController.java
tresor-server/Tresor/src/main/java/net/juligames/tresor/elements/: ApplicationFrame.java  Element.java  Panel.java  PanelContainer.java
tresor-server/Tresor/src/main/java/net/juligames/tresor/lang/: Translations.java
tresor-server/Tresor/src/main/java/net/juligames/tresor/model/: MavenPropertiesUtil.java  ModelRegistry.java  ProjectPropertiesUtil.java  PublicModel.java
tresor-server/Tresor/src/main/java/net/juligames/tresor/utils/: SecureRunnableRunner.java
tresor-server/Tresor/src/main/java/net/juligames/tresor/views/: DashboardView.java  DefaultWindow.java  LoginView.java  SettingsView.java  TresorWindow.java
tresor-server/Tresor/src/main/resources/: application.properties  langfile_en.json
tresor-server/Tresor/src/main/resources/langfiles/: langfile_de.json  langfile_en.json
tresor-win-display/: .gitignore  CMakeLists.txt  tresor-display.cpp
tresor-win-display/src/: tresor-display.cpp
tresor-win-echo/: CMakeLists.txt
tresor-win-echo/src/: tresor-echo.cpp
(+6 files in other folders)
